--- a/app/src/main/res/layout/activity_sensor_details.xml
+++ b/app/src/main/res/layout/activity_sensor_details.xml
@@ -206,89 +206,100 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="0dp"
-        android:layout_height="400dp"
-        android:background="@drawable/rounded_corner_background"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">
 
-        <LinearLayout
-            android:id="@+id/linearLayout4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.05">
-
-            <TextView
-                android:id="@+id/title_of_plot"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                android:baselineAligned="false"
-                android:text="@string/wykresy"
-                android:textAlignment="textStart"
-                android:textColor="@color/Text"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/ostatnie_10_godzin"
-                android:textColor="@color/Text_light"
-                android:textSize="12sp"
-                tools:ignore="TextContrastCheck" />
-        </LinearLayout>
-
-        <ScrollView
-            android:id="@+id/scrollView3"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_margin="32dp"
-            android:clipChildren="false"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
-            app:layout_constraintVertical_bias="0.0">
+            android:layout_height="match_parent"
+            android:background="@drawable/rounded_corner_background"
+            app:behavior_hideable="false"
+            app:behavior_peekHeight="65dp"
+            app:layout_behavior="@string/bottom_sheet_behavior"
+
+            >
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:id="@+id/linearLayout4"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.05">
 
-                <ImageView
-                    android:id="@+id/plotCanvas2"
+                <TextView
+                    android:id="@+id/title_of_plot"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:adjustViewBounds="true"
-                    android:contentDescription="@string/wykresy"
-                    android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/placeholder_for_plot" />
+                    android:layout_height="wrap_content"
+                    android:layout_margin="1dp"
+                    android:baselineAligned="false"
+                    android:text="@string/wykresy"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/Text"
+                    android:textSize="16sp" />
 
-                <ImageView
-                    android:id="@+id/plotCanvas1"
+                <TextView
+                    android:id="@+id/textView4"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:adjustViewBounds="true"
-                    android:contentDescription="@string/wykresy"
-                    android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/placeholder_for_plot" />
+                    android:layout_height="wrap_content"
+                    android:text="@string/ostatnie_10_godzin"
+                    android:textColor="@color/Text_light"
+                    android:textSize="12sp"
+                    tools:ignore="TextContrastCheck" />
             </LinearLayout>
-        </ScrollView>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <ScrollView
+                android:id="@+id/scrollView3"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_margin="32dp"
+                android:clipChildren="false"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
+                app:layout_constraintVertical_bias="0.0">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/plotCanvas2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:adjustViewBounds="true"
+                        android:contentDescription="@string/wykresy"
+                        android:scaleType="fitCenter"
+                        app:srcCompat="@drawable/placeholder_for_plot" />
+
+                    <ImageView
+                        android:id="@+id/plotCanvas1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:adjustViewBounds="true"
+                        android:contentDescription="@string/wykresy"
+                        android:scaleType="fitCenter"
+                        app:srcCompat="@drawable/placeholder_for_plot" />
+                </LinearLayout>
+            </ScrollView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
